dark mode fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -341,7 +341,7 @@ hr.divider {
 .ArticleCard {
   align-items: flex-start;
     align-self: stretch;
-    background-color: var(--color-gray-51);
+    background-color: var(--off-white);
     border-radius: 36px;
     display: flex;
     /* flex-direction: column; */
